# fovea

./: .env.demo  .env.example  .env.hybrid  .env.s3  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_QUICK_REFERENCE.md  EVALUATION.md  OBSERVABILITY.md  README.md  SAVE_FIX.md  SCREENSHOT_FIX_PLAN.md  UR INFACT Reports.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.wikibase.yml  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  deploy-staging.yml  deploy.yml  docker.yml  docs-links.yml  docs.yml  e2e.yml  health-check.yml  release.yml  rollback.yml  security.yml
annotation-tool/: .dockerignore  .eslintrc.cjs  BUNDLE_OPTIMIZATION.md  DOCTEST_PLAN.md  Dockerfile  TESTING_SUMMARY.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts
annotation-tool/.github/workflows/: README.md  ci.yml
annotation-tool/src/: App.test.tsx  App.tsx  index.css  main.test.tsx  main.tsx  vite-env.d.ts
annotation-tool/src/api/: client.test.ts  client.ts
annotation-tool/src/components/: AnnotationCandidatesList.stories.tsx  AnnotationCandidatesList.test.tsx  AnnotationCandidatesList.tsx  AnnotationEditor.tsx  AnnotationOverlay.test.tsx  AnnotationOverlay.tsx  AnnotationWorkspace.css  AnnotationWorkspace.test.tsx  AnnotationWorkspace.tsx  CommandPalette.tsx  EntityEditor.tsx  EntityTypeEditor.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorFallback.test.tsx  ErrorFallback.tsx  EventEditor.tsx  EventTypeEditor.tsx  ExportDialog.tsx  GlossEditor.tsx  GlossRenderer.tsx  ImportDataDialog.test.tsx  ImportDataDialog.tsx  ImportDialog.tsx  ImportResultDialog.tsx  JobStatusIndicator.test.tsx  JobStatusIndicator.tsx  Layout.tsx  ModelSettingsPanel.stories.tsx  ModelSettingsPanel.test.tsx  ModelSettingsPanel.tsx  ModelStatusDashboard.stories.tsx  ModelStatusDashboard.test.tsx  ModelStatusDashboard.tsx  OntologyAugmenter.test.tsx  OntologyAugmenter.tsx  OntologyBuilder.tsx  PersonaEditor.tsx  PersonaManager.tsx  (+10 more)
annotation-tool/test/: README.md  setup.ts
docs/: FIXES_APPLIED.md  VERIFICATION_REPORT.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/api/: claims-endpoints.md
docs/debugging/: claim-relations-test-issues.md
docs/development/: backend-dev.md  contributing.md  python-dev.md  testing.md
docs/docs/: intro.md
docs/model-service/: claim-extraction.md  claim-synthesis.md
docs/reference/: data-model.md  docker-commands.md  environment-variables.md  glossary.md  service-ports.md
docs/scripts/: generate-api-docs.sh
docs/static/: CNAME
docs/wikibase/: data-loading.md  overview.md  setup.md
grafana-dashboards/: dashboards.yml
model-service/: .coverage  .dockerignore  .env.example  Dockerfile  coverage.json  package.json  pydoc-markdown.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
model-service/config/: models.yaml
model-service/docs/: conf.py  index.rst
model-service/src/: __init__.py  audio_loader.py  audio_utils.py  av_fusion.py  claim_extraction.py  claim_synthesis.py  detection_loader.py  llm_loader.py  main.py  model_manager.py  models.py  observability.py  ontology_augmentation.py  routes.py  summarization.py  tracking_loader.py  video_downloader.py  video_utils.py  vlm_loader.py
model-service/src/external_apis/: __init__.py  anthropic_client.py  base.py  google_client.py  openai_client.py  router.py
model-service/src/external_apis/audio/: __init__.py  assemblyai_client.py  aws_transcribe_client.py  azure_speech_client.py  base.py  deepgram_client.py  gladia_client.py  google_speech_client.py  revai_client.py
model-service/test/: README.md  __init__.py  conftest.py  test_claim_synthesis.py  test_detection_loader.py  test_llm_loader.py  test_main.py  test_model_manager.py  test_observability.py  test_ontology_augmentation.py  test_routes.py  test_summarization.py  test_tracking_loader.py  test_video_downloader.py  test_video_utils.py
model-service/test/external_apis/: test_anthropic_client.py  test_google_client.py  test_llm_integration.py  test_openai_client.py  test_router.py  test_vlm_integration.py
model-service/test/fixtures/: __init__.py  personas.py
model-service/test/loaders/: test_detection_loader.py  test_llm_loader.py  test_tracking_loader.py  test_vlm_loader.py
model-service/test/routes/: test_routes.py
model-service/test/utils/: test_video_utils.py
server/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  package-lock.json  package.json  tsconfig.json  typedoc.json  vitest.config.ts
server/prisma/: schema.prisma  seed.ts
server/src/: app.ts  index.ts  metrics.ts  tracing.ts
server/test/: README.md  app.test.ts  database.test.ts  error-handler.test.ts  models.test.ts  observability.test.ts  personas.test.ts  queryBuilder.test.ts  setup.ts  videos.test.ts
test-data/: dust-storm.info.json  dust-storm.webm  𝕻𝖆𝖗𝖆4𝕭𝖊𝖑𝖑𝖚𝖒 - Dust storm that rolled through yesterday [1960343160728772608].info.json  🎆 - Storm, Haze, and Aurora's Mummy Dust vocals [1957079257131204608].info.json
test-utils/: Dockerfile.mock-model-service  mock-model-service.js
test-videos/: README.md  mummy-dust.info.json
wikibase/: Dockerfile  pyproject.toml  pytest.ini
wikibase/LocalSettings.d/: cors.php
wikibase/config/: LocalSettings.php  example-config.yaml
wikibase/output/: id-mapping.json
wikibase/scripts/: __init__.py  entity_converter.py  exceptions.py  import_config.py  import_dump.py  import_entities.py  import_sparql.py  import_test_data.py  import_types.py  main.py  wikibase_client.py  wikidata_client.py
wikibase/test/: __init__.py  conftest.py  test_entity_converter.py  test_import_config.py  test_import_entities.py  test_wikibase_client.py  test_wikidata_client.py
wikibase/test-data/: unit-test-entities.json
(+435 files in other folders)
