[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fovea-model-service"
version = "0.1.0"
description = "Model service for fovea video annotation tool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]==0.27.1",
    "pydantic>=2.9",
    "python-multipart==0.0.9",
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-instrumentation-fastapi==0.46b0",
    "opentelemetry-exporter-otlp-proto-http==1.25.0",
    "redis>=5.0.0",
    "opentelemetry-instrumentation-redis==0.46b0",
    "opencv-python==4.9.0.80",
    "numpy==1.26.4",
    "pyyaml==6.0.1",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.0",
    "accelerate>=0.34.0",
    "pillow>=10.2.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.2",
    "ultralytics>=8.3.0",
    "supervision>=0.22.0",
    "pycocotools>=2.0.10",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
quantization = [
    "bitsandbytes>=0.42.0",
]
sglang = [
    "sglang>=0.4.1",
]
vllm = [
    "vllm>=0.6.3",
]
sam2 = [
    "sam-2 @ git+https://github.com/facebookresearch/segment-anything-2.git",
]
audio = [
    "openai-whisper>=20240930",
    "faster-whisper>=1.1.0",
    "pyannote.audio>=3.3.0",
    "torch-audiomentations>=0.11.0",
    "pydub>=0.25.1",
    "assemblyai>=0.40.0",
    "deepgram-sdk>=3.8.0",
    "boto3>=1.35.0",
    "google-cloud-speech>=2.30.0",
    "azure-cognitiveservices-speech>=1.42.0",
]
recommended = [
    "bitsandbytes>=0.42.0",
]
inference-engines = [
    "bitsandbytes>=0.42.0",
    "sglang>=0.4.1",
    "vllm>=0.6.3",
    "sam-2 @ git+https://github.com/facebookresearch/segment-anything-2.git",
]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "ruff==0.2.1",
    "mypy==1.8.0",
    "types-PyYAML>=6.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "pydoc-markdown>=4.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # use of assert (allowed in tests)
    "ANN101",  # missing type annotation for self in method
    "ANN102",  # missing type annotation for cls in classmethod
    "ANN003",  # missing type annotation for **kwargs (standard idiom)
    "ANN401",  # typing.Any is disallowed (too strict, needed for model objects)
    "T201",    # print found (logging is not set up yet, using print)
    "PLW0603", # global statement (needed for FastAPI lifespan)
    "S603",    # subprocess without shell (ffmpeg is system tool, safe)
    "S607",    # partial executable path (ffmpeg is in PATH)
    "ARG001",  # unused function argument (FastAPI requires signature)
    "ARG002",  # unused method argument (kwargs is standard idiom)
    "PLR0913", # too many arguments (VideoInfo dataclass needs 7 params)
    "PLR0912", # too many branches (video processing has complex logic)
    "PLR0915", # too many statements (video processing needs many steps)
    "PTH123",  # use Path.open (external APIs provide string paths)
    "PTH110",  # use Path.exists (temp file handling uses os.path)
    "PTH107",  # use Path.unlink (temp file handling uses os.remove)
    "PTH108",  # use Path.unlink (temp file handling uses os.unlink)
    "S306",    # mktemp usage (needed for temporary audio extraction)
    "PLR2004", # magic numbers (thresholds like 0.5 are domain-specific)
    "SIM117",  # nested with statements (clearer error handling)
    "SIM105",  # use contextlib.suppress (simpler try-except-pass for cleanup)
    "S110",    # try-except-pass without logging (cleanup errors are non-critical)
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["S101", "S108", "ANN201", "ANN202", "ANN001", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_unimported = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["sglang", "sglang.*", "vllm", "vllm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["transformers", "transformers.*"]
follow_imports = "skip"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["external_apis", "external_apis.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["ultralytics", "ultralytics.*", "groundingdino", "groundingdino.*", "supervision", "supervision.*", "sam2", "sam2.*", "pycocotools", "pycocotools.*", "httpx", "httpx.*", "tenacity", "tenacity.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["whisper", "whisper.*", "faster_whisper", "faster_whisper.*", "pyannote", "pyannote.*", "torch_audiomentations", "torch_audiomentations.*", "pydub", "pydub.*", "assemblyai", "assemblyai.*", "deepgram", "deepgram.*", "boto3", "boto3.*", "google.cloud.speech", "google.cloud.speech.*", "azure.cognitiveservices.speech", "azure.cognitiveservices.speech.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiohttp", "aiohttp.*", "aiofiles", "aiofiles.*"]
ignore_missing_imports = true
