[project]
name = "fovea-wikibase-loader"
version = "0.1.0"
description = "Data loader for importing Wikidata into local Wikibase instances"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "FOVEA Team" }]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "SPARQLWrapper>=2.0.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "types-tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "test*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # assert used (ok in tests)
    "ANN101",  # missing self annotation
    "ANN102",  # missing cls annotation
    "ANN003",  # missing kwargs annotation
    "ANN401",  # dynamically typed Any
    "PLR0913", # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["S101", "ANN201", "ANN202", "ARG001", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["SPARQLWrapper.*"]
ignore_missing_imports = true
